fix: - Fixed commerce-cart too much spacing at the top of page

--- a/blocks/commerce-cart/commerce-cart.css
+++ b/blocks/commerce-cart/commerce-cart.css
@@ -1,5 +1,5 @@
 .commerce-cart {
-  padding: var(--spacing-large) 0;
+  padding: 0;
   position: relative;
 }
 
